# store

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  celerybeat-schedule  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.rst
accounts/: apps.py  receivers.py
accounts/api/: urls.py
accounts/api/v1/: urls.py
carts/: admin.py  apps.py  models.py
carts/api/: urls.py
carts/api/v1/: serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_alter_cart_unique_together.py
notifications/: admin.py  apps.py  models.py  tasks.py
notifications/migrations/: 0001_initial.py
notifications/templates/email/: payment_confirmation_email.html
orders/: admin.py  apps.py  models.py  querysets.py
orders/api/: urls.py
orders/api/v1/: urls.py
orders/migrations/: 0001_initial.py
payments/: admin.py  apps.py  models.py  tasks.py
payments/migrations/: 0001_initial.py
products/: admin.py  models.py
products/api/: urls.py
products/api/v1/: serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_remove_category_child.py  0003_alter_product_discount_price_alter_product_price.py
store/: celery.py  settings.py  urls.py  uwsgi.ini  viewsets.py
